--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
         const successMessage = document.getElementById('successMessage');
 
         // Configuration - Update this URL when ngrok restarts
-        const WEBHOOK_URL = 'https://f21b0411950d.ngrok-free.app/webhook/insurance-pdf-processor';
+        const WEBHOOK_URL = 'http://localhost:5678/webhook-test/insurance-scope-prod-v1';
+
 
         // Maximum file size in bytes (100MB = 100 * 1024 * 1024)
         const MAX_FILE_SIZE = 100 * 1024 * 1024;
