--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
         const successMessage = document.getElementById('successMessage');
 
         // Configuration - Update this URL when ngrok restarts
-        const WEBHOOK_URL = 'http://localhost:5678/webhook-test/insurance-scope-prod-v1';
+        const WEBHOOK_URL = 'https://fad3776db95d.ngrok-free.app/webhook/insurance-scope-prod-v1';
+
 
 
         // Maximum file size in bytes (100MB = 100 * 1024 * 1024)
