--- a/index.html
+++ b/index.html
@@ -327,11 +327,7 @@
         const successMessage = document.getElementById('successMessage');
 
         // Configuration - Update this URL when ngrok restarts
-       https://7ad830e361db.ngrok-free.app/webhook/insurance-scope-prod-v1
-
-
-
-
+        const WEBHOOK_URL = 'https://f21b0411950d.ngrok-free.app/webhook/insurance-scope';
 
         // Maximum file size in bytes (100MB = 100 * 1024 * 1024)
         const MAX_FILE_SIZE = 100 * 1024 * 1024;
