Fix webhook URL for n8n integration

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         const successMessage = document.getElementById('successMessage');
 
         // Configuration - Update this URL when ngrok restarts
-        const WEBHOOK_URL = 'https://c1b7681dd5be.ngrok-free.app/webhook';
+        const WEBHOOK_URL = 'https://c1b7681dd5be.ngrok-free.app/webhook-test/insurance-scope-prod-v1';
 
 
         // Maximum file size in bytes (100MB = 100 * 1024 * 1024)
